Added HTML and CSS styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,17 @@
 
 <head>
     <title>Flask Demo</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+
+    <!--
+        You can add Google fonts to an HTML document - go to "fonts.google.com"
+        and look up a font type that you'd like to use. They will provide the
+        necessary HTML and CSS lines that you'd need to add in order to use
+        that specific family.
+    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
